# rdpiano

./: .gitignore  .gitmodules  README.md  talk_outline.md
.github/workflows/: main.yml
disasm/: mk80_rom_b.asm  rd200_rom_b.asm  test_inj.asm
emulator/: CMakeLists.txt  main.cpp  mame_utils.h  mcu.cpp  mcu.h  sound_chip.cpp  sound_chip.h
librdpiano/: CMakeLists.txt
librdpiano/include/: mame_utils.h  mcu.h  sound_chip.h
librdpiano/src/: mcu.cpp  sound_chip.cpp
librdpiano/test/: standalone.cpp
rdpiano_juce/: download-juce.sh  rdpiano_juce.jucer
rdpiano_juce/Source/: LSP.cpp  LSP.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
re_stuff/disasm/: mk80_rom_b.asm  mks20_rom_b.asm  rd200_rom_a.asm  rd200_rom_b.asm
re_stuff/luts/: RD200_C_desc.hex  README.md  (+7 more)
roms/: RD200_C_desc.hex  RD200_IC10_desc.hex  RD200_IC5_desc.hex  RD200_IC6_desc.hex  RD200_IC7_desc.hex
schematics/: schematics.kicad_pro  schematics.kicad_sch  sym-lib-table
tooling/: analyze_conns.js  celldefs.xml  cellsInfo.json  cells_verilog.js  common.js  extract_cells.js  fix_rename.js  package.json  paint_cells.js  svg_to_elk.js  svg_to_kicad.js  svg_to_verilog.js
verilog/: cpu_mock.v  cpub_ics.v  emu.cpp  exp_table.csv  fujitsu_cells.v  ic19.v  ic19_attempt.v  ic19_core.v  ic19_env_table.csv  ic19_env_test.v  ic19_raw.v  ic19_raw_prev.v  ic8.v  ic8_env_test.v  ic8_expdec_table.csv  ic8_raw.v  ic9.v  ic9_env_test.v  ic9_phase_table.csv  ic9_raw.v  plot.py  roms.v  sram.v  test_gen_exp.cpp  test_mult.cpp  testbench.v  testbench_ic19.v  testbench_vk1000.v  utils.v
(+41 files in other folders)
